refactoring + redux-form

--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 Dynamic Routing
-Dynamic Combine Reducers
 Flexbox
-Radium
+Radium - No much support for stateless components
 Server Side Rendering
 react-redux-router
-Functional Views
 redux-form
